force-app/main/default/objects/GW_Volunteers__Job_Recurrence_Schedule__c/GW_Volunteers__Job_Recurrence_Schedule__c.object-meta.xml
<CustomObject>
    <label>Job Recurrence Schedule</label>
    <nameField>
        <displayFormat>JRS-{00000}</displayFormat>
        <label>JRS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Recurrence Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>