force-app/main/default/objects/GW_Volunteers__Job_Recurrence_Schedule__c/fields/GW_Volunteers__Desired_Number_of_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Desired_Number_of_Volunteers__c</fullName>
    <label>Desired Number of Volunteers</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>