force-app/main/default/objects/GW_Volunteers__Job_Recurrence_Schedule__c/fields/GW_Volunteers__Duration__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Duration__c</fullName>
    <label>Duration</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>