force-app/main/default/objects/GW_Volunteers__Job_Recurrence_Schedule__c/fields/GW_Volunteers__Schedule_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Schedule_Start_Date_Time__c</fullName>
    <label>Schedule Start Date &amp; Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>