force-app/main/default/objects/GW_Volunteers__Job_Recurrence_Schedule__c/fields/GW_Volunteers__Volunteer_Job__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Job__c</fullName>
    <inlineHelpText>The Volunteer Job this Recurrence Schedule should be associated with.</inlineHelpText>
    <label>Volunteer Job</label>
    <referenceTo>GW_Volunteers__Volunteer_Job__c</referenceTo>
    <relationshipName>Volunteer_Job_Recurrence_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>