force-app/main/default/objects/GW_Volunteers__Job_Recurrence_Schedule__c/validationRules/GW_Volunteers__JRS_Days_Of_Week_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>GW_Volunteers__JRS_Days_Of_Week_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(GW_Volunteers__Days_of_Week__c)</errorConditionFormula>
    <errorDisplayField>GW_Volunteers__Days_of_Week__c</errorDisplayField>
    <errorMessage>You must select at least one value for Days of Week.</errorMessage>
</ValidationRule>