force-app/main/default/objects/GW_Volunteers__Job_Recurrence_Schedule__c/validationRules/GW_Volunteers__JRS_Weekly_Occurrence_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>GW_Volunteers__JRS_Weekly_Occurrence_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(GW_Volunteers__Weekly_Occurrence__c)</errorConditionFormula>
    <errorDisplayField>GW_Volunteers__Weekly_Occurrence__c</errorDisplayField>
    <errorMessage>You must select at least one value for Weekly Occurrence.</errorMessage>
</ValidationRule>