force-app/main/default/objects/GW_Volunteers__Job_Recurrence_Schedule__c/listViews/GW_Volunteers__AllJRS.listView-meta.xml
<ListView>
    <fullName>GW_Volunteers__AllJRS</fullName>
    <columns>NAME</columns>
    <columns>GW_Volunteers__Volunteer_Job__c</columns>
    <columns>GW_Volunteers__Weekly_Occurrence__c</columns>
    <columns>GW_Volunteers__Days_of_Week__c</columns>
    <columns>GW_Volunteers__Schedule_Start_Date_Time__c</columns>
    <columns>GW_Volunteers__Duration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>